fix: stat block width
it was overlapping other text

--- a/src/css/__styles/page/_block-challenge.scss
+++ b/src/css/__styles/page/_block-challenge.scss
@@ -50,7 +50,7 @@
 
     .stat-container {
       display: block;
-      width: 300px;
+      width: 325px;
 
       @include sm() {
         width: 100px;
